feat: add header block styles (mobile, tablet, desktop)

--- a/source/sass/common/global.scss
+++ b/source/sass/common/global.scss
@@ -6,11 +6,11 @@
 }
 
 body {
-  font-family: "Montserrat", "Arial", sans-serif;
+  font-family: "Roboto Condensed Regular", "Arial", sans-serif;
   font-size: 14px;
-  line-height: 143%;
-  background-color: $basic-white;
-  color: $basic-black;
+  line-height: 22px;
+  color: #102654;
+  background-color: #FFFFFF;
 }
 
 picture,
