--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -1,17 +1,20 @@
-/* здесь используйте глобальные переменные */
-// Цвета
-$basic-white: #ffffff;
-$basic-black: #333333;
-$basic-purple: #7859cf;
-$secondary-purple: #9070ec;
-$basic-light-gray: #e2e2e2;
-$secondary-light-gray: #f8f8f8;
-$basic-gray: #bdbdbd;
+// глобальные переменные
+// цвета
+$basic-light: #ffffff;
+$secondary-light: #f8f9fc;
+$basic-dark: #102654;
+$secondary-dark: #1c3374;
+$footer-background:#030a1a;
+$akcent: #103aae;
+$button-tab: #d10a42;
+$banner: #ed0233;
+$form-error: #ff121f;
 
-// Шрифт
-$montserrat-font: "Montserrat", "Arial", sans-serif;
+$gradient-dark: #003D85;
+$gradient-light: #B80027;
 
-// Ширина экранов
-$mobile-width-only: (max-width: 767px);
-$tablet-width-only: ((min-width: 768px) and (max-width: 1365px));
-$desktop-width-only: (min-width: 1366px);
+// ширина экранов
+$mobile-width-max: 767px;
+$tablet-width-min: 768px;
+$tablet-width-max: 1365px;
+$desktop-width-min: 1366px;
