--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -9,17 +9,17 @@
   margin: 0 auto;
 
   @media (max-width: $mobile-width-max) {
-    width: 290px;
+    width: $mobile-content-width;
     padding: 15px 0;
   }
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-    width: 679px;
+    width: $tablet-content-width;
     padding: 30px 0;
   }
 
   @media (min-width: $desktop-width-min) {
-    width: 1160px;
+    width: $desktop-content-width;
     padding: 30px 0;
   }
 }
