--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,6 +10,7 @@
 
 // blocks
 @import "blocks/about.scss";
+@import "blocks/button.scss";
 @import "blocks/contacts.scss";
 @import "blocks/faq.scss";
 @import "blocks/features.scss";
