feat: add price block styles (mobile, tablet, desktop), make changes in markup (hero section and header, form and contacts)

--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -3,6 +3,8 @@
   background-image: linear-gradient(to right, $gradient-dark, $gradient-light);
 }
 
+.hero__header {}
+
 .hero__main-container {
   display: grid;
 
