--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -127,7 +127,11 @@
 }
 
 .about__video-container {
-  background-image: url("../../img/about/video-preview@1x.jpg");
+  background-image:
+  image-set(url("../../img/about/video-preview@1x.webp") type("image/webp") 1x,
+    url("../../img/about/video-preview@2x.webp") type("image/webp") 2x,
+    url("../../img/about/video-preview@1x.jpg") type("image/jpg") 1x,
+    url("../../img/about/video-preview@2x.jpg") type("image/jpg") 2x);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
