--- a/source/sass/blocks/games.scss
+++ b/source/sass/blocks/games.scss
@@ -1,7 +1,220 @@
-.games {}
+.games {
+  color: $basic-light;
+
+  @media (max-width: $mobile-width-max) {
+    margin: 25px 0;
+  }
+
+  @media (min-width: $tablet-width-min) {
+    display: flex;
+    justify-content: center;
+    width: $tablet-content-width;
+    margin: 60px auto;
+  }
+
+  @media (min-width: $tablet-width-min) {
+    margin: 100px auto;
+  }
+}
+
+.games__main-container {
+  background-color: $secondary-red;
+  margin: 0 auto;
+
+  @media (max-width: $mobile-width-max) {
+    width: $mobile-content-width;
+    padding: 40px;
+  }
+
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    width: 100%;
+    padding: 40px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    width: $desktop-content-width;
+    padding: 60px 80px;
+  }
+}
+
+.games__secondary-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+
+  @media (max-width: $mobile-width-max) {
+    column-gap: 37px;
+    row-gap: 5px;
+    margin-bottom: 16px;
+  }
+
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    column-gap: 20px;
+    row-gap: 10px;
+    margin-bottom: 10px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    column-gap: 77px;
+    row-gap: 20px;
+    margin-bottom: 30px;
+  }
+}
 
 .games__title {
+  width: 117px;
+  margin: 0;
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+
+  font-family: "Alumni Sans SemiBold", "Arial", sans-serif;
+  font-size: 48px;
+  line-height: 54px;
+
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    width: 100px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    width: 168px;
+    font-size: 82px;
+    line-height: 96px;
+  }
+}
+
+.games__description {
+  margin: 0;
+  font-family: "Roboto Condensed Light", "Arial", sans-serif;
+
+  @media (max-width: $mobile-width-max) {
+    margin-bottom: 16px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  @media (min-width: $tablet-width-min) {
+    margin-bottom: 10px;
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    margin-bottom: 30px;
+  }
+}
+
+.games__date-container {
+  grid-column: 2 / 3;
+
+  @media (max-width: $mobile-width-max) {
+    width: 56px;
+  }
+
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    width: 100px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    width: 95px;
+  }
+}
+
+.games__date-container--date {
+  grid-row: 1 / 2;
+}
+
+.games__date-container--time {
+  grid-row: 2 / 3;
+}
+
+.games__details-title {
+  margin: 0;
+  margin-bottom: 5px;
+  display: block;
+  font-family: "Roboto Condensed Light", "Arial", sans-serif;
+
+  @media (max-width: $mobile-width-max) {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  @media (min-width: $tablet-width-min) {
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    margin-bottom: 12px;
+  }
+}
+
+.games__details-title::after {
+  content: "";
+  display: block;
+  height: 1px;
+  background-color: $basic-light;
+}
+
+.games__time-container {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 3px;
+
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    gap: 5px;
+  }
+}
+
+.games__date-day {
+  font-family: "Roboto Condensed Bold", "Arial", sans-serif;
+  font-size: 24px;
+  line-height: 24px;
+
+  @media (min-width: $desktop-width-min) {
+    font-size: 40px;
+    line-height: 40px;
+  }
+}
+
+.games__month-year-container {
+  @media (max-width: $mobile-width-max) {
+    width: 32px;
+    font-size: 12px;
+    line-height: 12px;
+  }
+
+  @media (min-width: $tablet-width-min) {
+    width: 37px;
+    font-size: 14px;
+    line-height: 22px;
+  }
+}
+
+.games__date {
   margin: 0;
 }
 
+.games__time {
+  font-family: "Roboto Condensed Bold", "Arial", sans-serif;
+  font-size: 24px;
+  line-height: 24px;
+}
 
+.games__application {}
+
+.games__image {
+  margin: 0 auto;
+  display: block;
+
+  @media (max-width: $mobile-width-max) {
+    width: 290px;
+    height: 290px;
+  }
+
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    width: 378px;
+    height: 348px;
+  }
+
+  @media (min-width: $desktop-width-min) {}
+}
