feat: add juri block styles (mobile, tablet, desktop), change images, add img fo juri card in markup

--- a/source/sass/blocks/games.scss
+++ b/source/sass/blocks/games.scss
@@ -156,7 +156,7 @@
 
 .games__time-container {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
   gap: 3px;
 
