--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -11,6 +11,7 @@ $primary-red: #d10a42; // button tab
 $secondary-red: #ed0233; // баннер, градиент кнопки
 $form-error: #ff121f;
 $blackout: rgba(20, 54, 122, 0.5);
+$basic-extra-light: #b6bdcc;
 
 $gradient-dark: #003D85;
 $gradient-light: #B80027;
