feat: add features block styles (mobile, tablet, desktop)

--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -12,8 +12,8 @@ $secondary-red: #ed0233; // баннер, градиент кнопки
 $form-error: #ff121f;
 $blackout: rgba(20, 54, 122, 0.5);
 $basic-extra-light: #b6bdcc;
-
 $gradient-dark: #003D85;
+$text-gradient-dark: #0041ca; // 1 раз встр в блоке features
 $gradient-light: #B80027;
 
 // ширина экранов
