feat: add offers block styles (mobila, tablet, desktop)

--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -26,3 +26,11 @@ $desktop-width-min: 1366px;
 $mobile-content-width: 290px;
 $tablet-content-width: 679px;
 $desktop-content-width: 1160px;
+
+// шрифты
+$main-font-bold: "Roboto Condensed Bold", "Arial", sans-serif;
+$main-font-light: "Roboto Condensed Light", "Arial", sans-serif;
+$main-font-regular: "Roboto Condensed Regular", "Arial", sans-serif;
+$secondary-font-semibold: "Alumni Sans SemiBold", "Arial", sans-serif;
+$secondary-font-extrabold: "Alumni Sans ExtraBold", "Arial", sans-serif;
+
