--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -22,3 +22,39 @@
   background-color: transparent;
   border: 2px solid $basic-dark;
 }
+
+// кнопка без обрамления
+.button-no-borders {
+  display: inline-block;
+  font-family: $main-font-bold;
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 14px;
+  text-decoration: none;
+}
+
+.button-no-borders--primary {
+  color: $basic-light;
+}
+
+.button-no-borders--primary::after {
+  content: "";
+  display: block;
+  margin-top: 5px;
+  width: 100%;
+  height: 1px;
+  background-color: $basic-light;
+}
+
+.button-no-borders--secondary {
+  color: $basic-dark;
+}
+
+.button-no-borders--secondary::after {
+  content: "";
+  display: block;
+  margin-top: 5px;
+  width: 100%;
+  height: 1px;
+  background-color: $basic-dark;
+}
