--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,6 @@
-// Vendor
-// ---------------------------------
-@import "vendor/normalize";
+// vendor
+@import "vendor/normalize.scss";
+@import "vendor/swiper-bundle.css";
 
 // common
 @import "common/fonts.scss";
