--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,3 +1,183 @@
 .reviews {
+  @media (max-width: $mobile-width-max) {
+    margin: 40px auto;
+    width: $mobile-content-width;
+  }
 
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    position: relative;
+    margin: 60px auto;
+    width: $tablet-content-width;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    position: relative;
+    margin: 100px auto;
+    width: $desktop-content-width
+  }
+}
+
+.reviews__title {
+  font-family: $secondary-font-semibold;
+  text-align: center;
+
+  @media (max-width: $mobile-width-max) {
+    margin-bottom: 40px;
+    font-size: 32px;
+    line-height: 32px;
+  }
+
+  @media (min-width: $tablet-width-min) {
+    margin-bottom: 35px;
+    font-size: 54px;
+    line-height: 54px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    margin-bottom: 75px;
+  }
+}
+
+.reviews__swiper {
+  @media (max-width: $mobile-width-max) {
+    width: 240px;
+  }
+
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    position: relative;
+    width: 500px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    position: relative;
+    width: 560px;
+  }
+}
+
+.reviews__card {
+  background-color: $secondary-dark;
+  color: $basic-light;
+
+  @media (max-width: $mobile-width-max) {
+  padding: 30px 25px;
+  text-align: center;
+  }
+
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    padding: 40px 30px;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    padding: 60px;
+  }
+
+  div {
+    margin: 0 auto;
+    margin-bottom: 10px;
+    width: 68px;
+    height: 68px;
+    border-radius: 50%;
+    overflow: hidden;
+
+    @media (min-width: $tablet-width-min) {
+      position: absolute;
+      width: 80px;
+      height: 80px;
+    }
+  }
+
+  img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    transform: scale(1.6) translateY(8px);
+  }
+
+  h3 {
+    margin: 0;
+
+    @media (max-width: $mobile-width-max) {
+      margin-bottom: 16px;
+      font-size: 18px;
+      line-height: 20px;
+    }
+
+    @media (min-width: $tablet-width-min){
+      margin-left: 120px;
+      margin-bottom: 20px;
+      font-size: 22px;
+      line-height: 22px;
+    }
+
+    @media (min-width: $desktop-width-min) {
+      margin-left: 110px;
+    }
+  }
+
+  blockquote {
+    margin: 0;
+    font-family: $main-font-light;
+
+    @media (max-width: $mobile-width-max) {
+      min-height: 154px;
+    }
+
+    @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+      min-height: 120px;
+      margin-left: 120px;
+      font-size: 16px;
+      line-height: 24px;
+    }
+
+    @media (min-width: $desktop-width-min) {
+      min-height: 96px;
+      margin-left: 110px;
+    }
+  }
+}
+
+// кнопки
+.reviews__buttons-container {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) translateY(50px);
+
+  @media (max-width: $mobile-width-max) {
+    display: none;
+  }
+
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+    width: $tablet-content-width;
+  }
+
+  @media (min-width: $desktop-width-min) {
+    width: 768px;
+    transform: translate(-50%, -50%) translateY(30px);
+  }
+}
+
+.reviews__button {
+  @media (max-width: $mobile-width-max) {
+    display: none;
+  }
+
+  @media (min-width: $tablet-width-min) {
+    border: none;
+    background-color: $basic-dark;
+    width: 16px;
+    height: 32px;
+  }
+}
+
+.reviews__button--next {
+  mask: url("/__spritemap#sprite-slider-arrow-next-view") center no-repeat;
+}
+
+.reviews__button--prev {
+  mask: url("/__spritemap#sprite-slider-arrow-next-view") center no-repeat;
+  transform: rotate(180deg);
 }
