feat: add registration block styles (mobile, tablet, desktop)

--- a/source/sass/common/global.scss
+++ b/source/sass/common/global.scss
@@ -9,8 +9,8 @@ body {
   font-family: "Roboto Condensed Regular", "Arial", sans-serif;
   font-size: 14px;
   line-height: 22px;
-  color: #102654;
-  background-color: #FFFFFF;
+  color: $basic-dark;
+  background-color: $basic-light;
 }
 
 picture,
