feat: add footer block styles (mobile, tablet, desktop)

--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -13,7 +13,7 @@
   @media (min-width: $desktop-width-min) {
     position: relative;
     margin: 100px auto;
-    width: $desktop-content-width
+    width: $desktop-content-width;
   }
 }
 
