--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -78,10 +78,25 @@
   font-size: 14px;
   line-height: 14px;
   text-decoration: none;
+  min-height: 34px;
 }
 
+// кнопка без обрамления --primary
 .button-no-borders--primary {
   color: $basic-light;
+
+  &:hover {
+    opacity: 80%;
+  }
+
+  &:focus {
+    position: relative;
+  }
+
+  &:disabled,
+  &--disabled {
+    opacity: 50%;
+  }
 }
 
 .button-no-borders--primary::after {
@@ -93,8 +108,35 @@
   background-color: $basic-light;
 }
 
+.button-no-borders--primary:focus:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -15px;
+  left: -10px;
+  width: calc(100% + 20px);
+  height: 100%;
+  background-color: transparent;
+  border: 1px solid $basic-light;
+}
+
+
+// кнопка без обрамления --secondary
 .button-no-borders--secondary {
-  color: $basic-dark;
+  color: $secondary-dark;
+
+  &:hover {
+    opacity: 80%;
+  }
+
+  &:focus {
+    position: relative;
+  }
+
+  &:disabled,
+  &--disabled {
+    opacity: 30%;
+  }
 }
 
 .button-no-borders--secondary::after {
@@ -103,5 +145,17 @@
   margin-top: 5px;
   width: 100%;
   height: 1px;
-  background-color: $basic-dark;
+  background-color: $secondary-dark;
+}
+
+.button-no-borders--secondary:focus:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -15px;
+  left: -10px;
+  width: calc(100% + 20px);
+  height: 100%;
+  background-color: transparent;
+  border: 1px solid $secondary-dark;
 }
