--- a/source/sass/blocks/offers.scss
+++ b/source/sass/blocks/offers.scss
@@ -51,6 +51,32 @@
 
 .offers__card {
   margin: 0 auto;
+
+  h3 {
+    margin: 0;
+    font-family: $main-font-bold;
+
+    @media (max-width: $mobile-width-max) {
+      font-size: 22px;
+    }
+
+    @media (min-width: $tablet-width-min) {
+      font-size: 26px;
+      line-height: 26px;
+    }
+  }
+
+  p {
+    margin: 0;
+    font-family: $main-font-light;
+
+    @media (min-width: $tablet-width-min) {
+      font-size: 16px;
+    }
+  }
+}
+
+.offers__card--secondary {
   padding: 20px;
   border: 7px solid blue;
   border-image: linear-gradient(to bottom right, #D10A42, #00359F);
@@ -61,53 +87,44 @@
     margin-bottom: 30px;
   }
 
-  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+  @media (min-width: $tablet-width-min) {
     width: 324px;
+    min-height: 188px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   @media (min-width: $desktop-width-min) {
     width: 100%;
-    height: 174px;
+    min-height: 174px;
     align-self: self-end;
   }
 
   h3 {
-    margin: 0;
-    font-family: $main-font-bold;
-    font-size: 22px;
-
     @media (max-width: $mobile-width-max) {
       margin-bottom: 20px;
     }
 
     @media (min-width: $tablet-width-min) {
       margin-bottom: 10px;
-      font-size: 26px;
-      line-height: 26px;
     }
   }
 
   p {
-    margin: 0;
-    font-family: $main-font-light;
-
     @media (max-width: $mobile-width-max) {
       margin-bottom: 20px;
     }
 
     @media (min-width: $tablet-width-min) {
-      margin-bottom: 30px;
-      font-size: 16px;
-    }
-
-    @media (min-width: $desktop-width-min) {
-      margin-bottom: 40px;
+      margin-bottom: auto;
     }
   }
 }
 
 .offers__card--main {
   padding: 0;
+  margin-bottom: 40px;
   border: none;
   background-color: $secondary-red;
   color: $basic-light;
@@ -134,11 +151,6 @@
   h3 {
     @media (max-width: $mobile-width-max) {
       margin-bottom: 28px;
-    }
-
-    @media (min-width: $tablet-width-min) {
-      font-size: 26px;
-      line-height: 26px;
     }
   }
 
@@ -199,6 +211,7 @@
 }
 
 .offers__details {
+  margin-bottom: -15px;
 }
 
 .offers__image {
