fix: add disabled button state in FAQ block

--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -206,6 +206,10 @@
     background-color: #74819C;
     border-color: $secondary-dark;
   }
+
+  &:disabled {
+    opacity: 30%;
+  }
 }
 
 .faq__open-button::after {
