--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -159,12 +159,14 @@
     }
 
     @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+      width: 500px;
       margin-bottom: 32px;
       font-size: 22px;
       line-height: 22px;
     }
 
     @media (min-width: $desktop-width-min) {
+      width: 660px;
       margin-bottom: 31px;
       font-size: 24px;
       line-height: 24px;
