--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -6,7 +6,7 @@
   flex-wrap: wrap;
 
   @media (max-width: $mobile-width-max ) {
-  gap: 20px;
+    gap: 20px;
   }
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
@@ -23,15 +23,55 @@
   height: 25px;
   background-color: $basic-light;
   border-radius: 50%;
+  cursor: pointer;
+}
+
+.social-list__item:hover {
+  background-color: #74819C;
+
+  &>.social-list__link {
+    background-color: $basic-light;
+  }
+}
+
+.social-list__item:hover>.social-list__link {
+  background-color: $basic-light;
+}
+
+.social-list__item:focus {
+  background-color: #103AAE;
+
+  &>.social-list__link {
+    background-color: $basic-light;
+  }
+}
+
+.social-list__item:active {
+  background-color: $basic-dark;
+
+  &>.social-list__link {
+    background-color: $basic-light;
+  }
+}
+
+.social-list__item--disabled {
+  opacity: 30%;
 }
 
 .social-list__link {
   display: block;
   width: 25px;
   height: 25px;
+  border-radius: 50%;
   background-color: $footer-background;
   mask-position: center;
   mask-repeat: no-repeat;
+}
+
+.social-list__link:hover,
+.social-list__link:focus,
+.social-list__link:active {
+  background-color: $basic-light;
 }
 
 .social-list__link--vk {
