--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,6 +9,7 @@
 @import "common/global.scss";
 
 // blocks
+@import "blocks/arrows.scss";
 @import "blocks/page-body.scss";
 @import "blocks/about.scss";
 @import "blocks/button.scss";
