feat: add link offer states in footer block

--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -74,6 +74,10 @@
   background-color: $basic-light;
 }
 
+.social-list__link:disabled {
+  opacity: 30%;
+}
+
 .social-list__link--vk {
   mask-image: url("/__spritemap#sprite-vk-icon-view");
   mask-size: 12px 7px;
