--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -65,10 +65,35 @@
 }
 
 .footer__services-item-link {
+position: relative;
   text-decoration: none;
   color: $basic-light;
   font-family: $main-font-regular;
+}
 
+.footer__services-item-link:hover::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: $basic-light;
+  margin-top: 5px;
+}
+
+.footer__services-item-link:focus::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -5px;
+  right: -10px;
+  width: calc(100% + 20px);
+  height: calc(100% + 10px);
+  border: 1px solid $basic-light;
+  padding: 5px 10px;
+}
+
+.footer__services-item-link--disabled {
+  opacity: 40%;
 }
 
 .footer__social-list {
