--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,5 +1,4 @@
-.header {
-}
+.header {}
 
 .header-container {
   display: flex;
@@ -44,4 +43,31 @@
     font-size: 26px;
     line-height: 26px;
   }
+
+  &:hover {
+    color: rgba(28, 51, 116, 0.5);
+  }
+
+  &:focus {
+    color: $secondary-dark;
+  }
+
+  &:active {
+    color: $basic-dark;
+  }
+}
+
+.header__phone-link:active::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: $basic-dark;
+  margin-top: 5px;
+}
+
+.header__phone-link--disabled {
+  color: $secondary-light;
+  opacity: 50%;
 }
