--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -4,7 +4,7 @@ $basic-light: #ffffff;
 $secondary-light: #f8f9fc;
 $basic-dark: #102654;
 $secondary-dark: #1c3374;
-$footer-background:#030a1a;
+$footer-background: #030a1a;
 $akcent: #103aae;
 $button-gradient-blue: #003eb7;
 $primary-red: #d10a42; // button tab
@@ -12,9 +12,9 @@ $secondary-red: #ed0233; // баннер, градиент кнопки
 $form-error: #ff121f;
 $blackout: rgba(20, 54, 122, 0.5);
 $basic-extra-light: #b6bdcc;
-$gradient-dark: #003D85;
+$gradient-dark: #003d85;
 $text-gradient-dark: #0041ca; // 1 раз встр в блоке features
-$gradient-light: #B80027;
+$gradient-light: #b80027;
 
 // ширина экранов
 $mobile-width-max: 767px;
