--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -129,9 +129,9 @@
 .about__video-container {
   background-image:
     image-set(url("../../img/about/video-preview@1x.webp") type("image/webp") 1x,
-      url("../../img/about/video-preview@2x.webp") type("image/webp") 2x,
-      url("../../img/about/video-preview@1x.jpg") type("image/jpg") 1x,
-      url("../../img/about/video-preview@2x.jpg") type("image/jpg") 2x);
+    url("../../img/about/video-preview@2x.webp") type("image/webp") 2x,
+    url("../../img/about/video-preview@1x.jpg") type("image/jpg") 1x,
+    url("../../img/about/video-preview@2x.jpg") type("image/jpg") 2x);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -163,7 +163,7 @@
 
 // фон для видео
 .about__video-container::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -175,6 +175,9 @@
 
 .about__video {
   display: none;
+  width: 100%;
+  height: 100%;
+  border: none;
 }
 
 // кнопка play
@@ -244,7 +247,7 @@
 }
 
 .about__play:hover::before {
-    border-left: 10px solid rgba(16, 38, 84, 0.6);
+  border-left: 10px solid rgba(16, 38, 84, 0.6);
 }
 
 .about__play:hover::after {
