--- a/source/sass/blocks/games.scss
+++ b/source/sass/blocks/games.scss
@@ -66,7 +66,7 @@
   grid-column: 1 / 2;
   grid-row: 1 / 3;
 
-  font-family: "Alumni Sans SemiBold", "Arial", sans-serif;
+  font-family: $secondary-font-semibold;
   font-size: 48px;
   line-height: 54px;
 
@@ -83,7 +83,7 @@
 
 .games__description {
   margin: 0;
-  font-family: "Roboto Condensed Light", "Arial", sans-serif;
+  font-family: $main-font-light;
 
   @media (max-width: $mobile-width-max) {
     margin-bottom: 16px;
@@ -130,7 +130,7 @@
   margin: 0;
   margin-bottom: 5px;
   display: block;
-  font-family: "Roboto Condensed Light", "Arial", sans-serif;
+  font-family: $main-font-light;
 
   @media (max-width: $mobile-width-max) {
     font-size: 16px;
@@ -166,7 +166,7 @@
 }
 
 .games__date-day {
-  font-family: "Roboto Condensed Bold", "Arial", sans-serif;
+  font-family: $main-font-bold;
   font-size: 24px;
   line-height: 24px;
 
@@ -195,12 +195,10 @@
 }
 
 .games__time {
-  font-family: "Roboto Condensed Bold", "Arial", sans-serif;
+  font-family: $main-font-bold;
   font-size: 24px;
   line-height: 24px;
 }
-
-.games__application {}
 
 .games__image {
   margin: 0 auto;
@@ -215,6 +213,4 @@
     width: 378px;
     height: 348px;
   }
-
-  @media (min-width: $desktop-width-min) {}
 }
