--- a/source/sass/blocks/offers.scss
+++ b/source/sass/blocks/offers.scss
@@ -25,7 +25,7 @@
 
 .offers__title {
   margin: 0;
-  font-family: "Alumni Sans SemiBold", "Arial, sans-serif";
+  font-family: $secondary-font-semibold;
   text-align: center;
 
   @media (max-width: $mobile-width-max) {
@@ -78,8 +78,8 @@
 
 .offers__card--secondary {
   padding: 20px;
-  border: 7px solid blue;
-  border-image: linear-gradient(to bottom right, #D10A42, #00359F);
+  border: 7px solid #00359f;
+  border-image: linear-gradient(to bottom right, #d10a42, #00359f);
   border-image-slice: 1;
 
   @media (max-width: $mobile-width-max) {
