--- a/source/sass/blocks/registration.scss
+++ b/source/sass/blocks/registration.scss
@@ -12,7 +12,7 @@
   background-color: $basic-dark;
   color: $basic-light;
 
-  @media (max-width: $mobile-width-max ) {
+  @media (max-width: $mobile-width-max) {
     padding: 70px 0;
   }
 
@@ -29,7 +29,7 @@
 .registration__form {
   margin: 0 auto;
 
-  @media (max-width: $mobile-width-max ) {
+  @media (max-width: $mobile-width-max) {
     width: $mobile-content-width;
   }
 
@@ -47,7 +47,7 @@
   font-family: $secondary-font-semibold;
 
 
-  @media (max-width: $mobile-width-max ) {
+  @media (max-width: $mobile-width-max) {
     margin-bottom: 36px;
     font-size: 32px;
     line-height: 32px;
@@ -59,8 +59,6 @@
     line-height: 54px;
     text-align: center;
   }
-
-
 }
 
 .registration__inputs-container {
@@ -79,7 +77,7 @@
 
   background-color: transparent;
   border: none;
-  border-bottom: 1px solid #74819C;
+  border-bottom: 1px solid #74819c;
   color: $basic-light;
   font-family: $main-font-light;
 
@@ -103,7 +101,7 @@
 
 // Контакты
 .registration__contacts {
-  @media (max-width: $mobile-width-max ) {
+  @media (max-width: $mobile-width-max) {
     margin: 40px auto;
     width: $mobile-content-width;
   }
