--- a/source/sass/common/fonts.scss
+++ b/source/sass/common/fonts.scss
@@ -4,8 +4,9 @@
   font-weight: 800;
   font-style: normal;
   font-display: swap;
-  src: url("../../fonts/alumni-sans/AlumniSans-ExtraBold.woff") format("woff"),
-  url("../../fonts/alumni-sans/AlumniSans-ExtraBold.woff2") format("woff2");
+  src:
+    url("../../fonts/alumni-sans/AlumniSans-ExtraBold.woff") format("woff"),
+    url("../../fonts/alumni-sans/AlumniSans-ExtraBold.woff2") format("woff2");
 }
 
 @font-face {
@@ -13,8 +14,9 @@
   font-weight: 600;
   font-style: normal;
   font-display: swap;
-  src: url("../../fonts/alumni-sans/AlumniSans-SemiBold.woff") format("woff"),
-  url("../../fonts/alumni-sans/AlumniSans-SemiBold.woff2") format("woff2");
+  src:
+    url("../../fonts/alumni-sans/AlumniSans-SemiBold.woff") format("woff"),
+    url("../../fonts/alumni-sans/AlumniSans-SemiBold.woff2") format("woff2");
 }
 
 @font-face {
@@ -22,8 +24,9 @@
   font-weight: 400;
   font-style: normal;
   font-display: swap;
-  src: url("../../fonts/roboto/RobotoCondensed-Regular.woff") format("woff"),
-  url("../../fonts/roboto/RobotoCondensed-Regular.woff2") format("woff2");
+  src:
+    url("../../fonts/roboto/RobotoCondensed-Regular.woff") format("woff"),
+    url("../../fonts/roboto/RobotoCondensed-Regular.woff2") format("woff2");
 }
 
 @font-face {
@@ -31,8 +34,9 @@
   font-weight: 700;
   font-style: normal;
   font-display: swap;
-  src: url("../../fonts/roboto/RobotoCondensed-Bold.woff") format("woff"),
-  url("../../fonts/roboto/RobotoCondensed-Bold.woff2") format("woff2");
+  src:
+    url("../../fonts/roboto/RobotoCondensed-Bold.woff") format("woff"),
+    url("../../fonts/roboto/RobotoCondensed-Bold.woff2") format("woff2");
 }
 
 @font-face {
@@ -40,6 +44,7 @@
   font-weight: 300;
   font-style: normal;
   font-display: swap;
-  src: url("../../fonts/roboto/RobotoCondensed-Light.woff") format("woff"),
-  url("../../fonts/roboto/RobotoCondensed-Light.woff2") format("woff2");
+  src:
+    url("../../fonts/roboto/RobotoCondensed-Light.woff") format("woff"),
+    url("../../fonts/roboto/RobotoCondensed-Light.woff2") format("woff2");
 }
