--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,28 +1,28 @@
 // vendor
-@import "vendor/normalize.scss";
+@import "vendor/normalize";
 @import "vendor/swiper-bundle.css";
 
 // common
-@import "common/fonts.scss";
-@import "common/variables.scss";
-@import "common/visually-hidden.scss";
-@import "common/global.scss";
+@import "common/fonts";
+@import "common/variables";
+@import "common/visually-hidden";
+@import "common/global";
 
 // blocks
-@import "blocks/arrows.scss";
-@import "blocks/page-body.scss";
-@import "blocks/about.scss";
-@import "blocks/button.scss";
-@import "blocks/contacts.scss";
-@import "blocks/faq.scss";
-@import "blocks/features.scss";
-@import "blocks/footer.scss";
-@import "blocks/games.scss";
-@import "blocks/header.scss";
-@import "blocks/hero.scss";
-@import "blocks/juri.scss";
-@import "blocks/offers.scss";
-@import "blocks/price.scss";
-@import "blocks/registration.scss";
-@import "blocks/reviews.scss";
-@import "blocks/social-list.scss";
+@import "blocks/arrows";
+@import "blocks/page-body";
+@import "blocks/about";
+@import "blocks/button";
+@import "blocks/contacts";
+@import "blocks/faq";
+@import "blocks/features";
+@import "blocks/footer";
+@import "blocks/games";
+@import "blocks/header";
+@import "blocks/hero";
+@import "blocks/juri";
+@import "blocks/offers";
+@import "blocks/price";
+@import "blocks/registration";
+@import "blocks/reviews";
+@import "blocks/social-list";
