--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -90,7 +90,7 @@
     width: 100%;
     height: auto;
     object-fit: cover;
-    transform: scale(1.6) translateY(8px);
+    transform: scale(1.6) translateY(7px) translateX(-2px);
   }
 
   h3 {
