--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -21,7 +21,7 @@
 
   @media (max-width: $mobile-width-max) {
     width: $mobile-content-width;
-    margin-bottom: 25px;
+    margin-bottom: 35px;
     font-size: 32px;
     line-height: 32px;
   }
@@ -90,7 +90,7 @@
 
   @media (max-width: $mobile-width-max) {
     width: 140px;
-    padding: 15px;
+    padding: 14px;
     font-size: 16px;
     line-height: 16px;
   }
@@ -166,8 +166,8 @@
     margin: 0;
 
     @media (max-width: $mobile-width-max) {
-      width: 238px;
-      margin-bottom: 20px;
+      width: 235px;
+      margin-bottom: 19px;
       font-size: 20px;
       line-height: 20px;
     }
@@ -305,6 +305,8 @@
     display: block;
     margin: 0;
     font-family: $main-font-light;
+    font-size: 16px;
+    line-height: 20px;
 
     @media (max-width: $mobile-width-max) {
       margin-bottom: 20px;
