--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -24,6 +24,8 @@
   @media (min-width: $tablet-width-min) {
     position: relative;
     display: grid;
+    // display: flex;
+    // flex-wrap: wrap;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 60px;
     row-gap: 15px;
@@ -51,6 +53,17 @@
     margin-bottom: 27px;
   }
 }
+
+.contacts__item:nth-child(2) {
+  grid-column: 1 / 2;
+  grid-row: 2 /3;
+}
+
+.contacts__item:nth-child(3) {
+  grid-column: 2 /3;
+  grid-row: 1 /2;
+}
+
 
 .contacts__item-title {
   margin: 0;
