--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -28,7 +28,7 @@
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
     width: $tablet-content-width;
-    margin-bottom: 45px;
+    margin-bottom: 43px;
     font-size: 42px;
     line-height: 42px;
   }
@@ -97,7 +97,7 @@
 
   @media (min-width: $tablet-width-min) {
     width: 162px;
-    padding: 18px;
+    padding: 17px;
     font-size: 18px;
     line-height: 18px;
   }
@@ -155,7 +155,7 @@
   }
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-    margin: 32px 0;
+    margin: 23px 0;
   }
 
   @media (min-width: $desktop-width-min) {
@@ -173,8 +173,8 @@
     }
 
     @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+      display: inline-block;
       width: 500px;
-      margin-bottom: 32px;
       font-size: 22px;
       line-height: 22px;
     }
@@ -207,8 +207,6 @@
   }
 
   @media (min-width: $tablet-width-min) {
-    margin-bottom: 32px;
-    padding: 10px;
     width: 40px;
     height: 40px;
     background-size: 20px 20px;
@@ -262,6 +260,12 @@
   background-color: #74819c;
 }
 
+.faq__tab-item + .faq__tab-item::after {
+  @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
+  margin-top: 23px;
+  }
+}
+
 .faq__tab-item:first-child::before {
   content: "";
   display: block;
@@ -274,7 +278,7 @@
   }
 
   @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-    margin-bottom: 32px;
+    margin-bottom: 23px;
   }
 
   @media (min-width: $desktop-width-min) {
@@ -295,10 +299,6 @@
     @media (max-width: $mobile-width-max) {
       margin-bottom: 20px;
     }
-
-    @media ((min-width: $tablet-width-min) and (max-width: $tablet-width-max)) {
-      margin-bottom: 19px;
-    }
   }
 
   p {
@@ -314,6 +314,7 @@
     }
 
     @media (min-width: $tablet-width-min) {
+      margin-top: 10px;
       margin-bottom: 23px;
       padding-right: 118px;
       font-size: 18px;
